--- a/UbUjian/module/POS/view/pos/transaksi/add.phtml
+++ b/UbUjian/module/POS/view/pos/transaksi/add.phtml
@@ -67,20 +67,20 @@ echo $this->form()->closeTag($form);
 <?php foreach($arrayData as $detail) : ?>
 	<tr>
 		<td>
-			<?php echo $detail['NamaBarang']; ?> 
+			<?php echo $detail['namaBarang']; ?> 
 		</td>
 		<td>
-			<?php echo $detail['HargaBarang']; ?> 
+			<?php echo $detail['hargaBarang']; ?> 
 		</td>
 		<td>
-			<?php echo $detail['StokBarang']; ?> 
+			<?php echo $detail['stokBarang']; ?> 
 		</td>
 		<td>
-			<?php echo $detail['Subtotal'];?> 
+			<?php echo $detail['subtotal'];?> 
 		</td>
 		<td style="width: 75px;">
 			<form method="post" action="">
-			<input type="hidden" name="idDelete" value="<?php echo $detail['IdBarang']; ?>"/>
+			<input type="hidden" name="idDelete" value="<?php echo $detail['idBarang']; ?>"/>
 			<input type="submit" name="deleteBtn" onclick="if (confirm('Apakah anda yakin ingin cancel Barang ini?')) { return true; } return false;" value="Cancel"/>
 			</form>
 		</td>
