--- a/UbUjian/module/POS/view/pos/transaksi/beli.phtml
+++ b/UbUjian/module/POS/view/pos/transaksi/beli.phtml
@@ -24,16 +24,16 @@
 <?php foreach($arrayData as $detail) : ?>
 	<tr>
 		<td style="text-align:left; width:150px;">
-			<?php echo $detail['NamaBarang']; ?> 
+			<?php echo $detail['namaBarang']; ?> 
 		</td>
 		<td style='text-align:right; width:75px;'>
-			<?php echo $detail['HargaBarang']; ?> 
+			<?php echo $detail['hargaBarang']; ?> 
 		</td>
 		<td style='text-align:right; width:75px;'>
-			<?php echo $detail['StokBarang']; ?> 
+			<?php echo $detail['stokBarang']; ?> 
 		</td>
 		<td style='text-align:right; width:75px;'>
-			<?php echo $detail['Subtotal'];?> 
+			<?php echo $detail['subtotal'];?> 
 		</td>
 	</tr>
 <?php endforeach; ?>
