--- a/UbUjian/module/POS/view/pos/report/report.phtml
+++ b/UbUjian/module/POS/view/pos/report/report.phtml
@@ -15,7 +15,7 @@
 	
 	echo 'Tanggal : ' . date("g:i a F j, Y ", strtotime($transaksi['transaksiData']['tglTransaksi']));?><br>
 </h4>
-<Table border=1 class='myTable'>
+<Table class='table table-striped'>
 	<tr>
 		<th>
 			Nama Barang
