--- a/UbUjian/public/css/style.css
+++ b/UbUjian/public/css/style.css
@@ -11,6 +11,10 @@ body {
     color: #68b604;
 }
 
+.validatorClass{
+  list-style-type: none;
+}
+
 .btn-success {
   background-color: #57a900;
   background-image: -moz-linear-gradient(top, #70d900, #57a900);
