--- a/UbUjian/module/POS/view/pos/transaksi/transaksi.phtml
+++ b/UbUjian/module/POS/view/pos/transaksi/transaksi.phtml
@@ -1,3 +1,10 @@
+<ul class="nav nav-tabs" role="tablist">
+  <li><a href="<?php echo $this -> url('home', array('action' => 'main')); ?>">Back to Main Menu</a></li>
+  <li><a href="<?php echo $this -> url('insert', array('action' => 'insert')); ?>">New Item</a></li>
+  <li class="active"><a href="<?php echo $this -> url('transaksi', array('action' => 'transaksi')); ?>">Transaksi</a></li>
+  <li><a href="<?php echo $this -> url('report', array('action' => 'report')); ?>">Report</a></li>
+  <li ><a href="<?php echo $this -> url('login/logout', array('action' => 'logout')); ?>">Logout</a></li>
+</ul>
 <h3>
 	Beli Barang Baru
 </h3>
